# ryukit

./: .env.template  .gitattributes  .gitignore  .isort.cfg  .prettierignore  .prettierrc  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  README.md  TODO.md  docker-compose.yaml  dockerfile  package-lock.json  package.json  pyinstaller.spec  pyproject.toml  pyrightconfig.json  specification.txt
.github/: dependabot.yaml
.github/actions/setup/: action.yaml
.github/workflows/: build.yaml  commit.yaml  enter_testing.yaml  production_ready.yaml  pull_to_main.yaml  release.yaml  staging.yaml  test.yaml  testing.yaml
app/: pyproject.toml
cli/: __main__.py
cli/data/functions/: save_states.py  source.py
cli/ui/constants/: configs.py
cmd/: Dockerfile  pyinstaller.spec  pyproject.toml  specification.txt  win.Dockerfile
cmd/resources/configs/: ryujinxkit.spec
cmd/resources/docker/: linux.Dockerfile  win.Dockerfile  windows.Dockerfile
cmd/src/ryujinxkit_cmd/: __main__.py  enums.py  session.py
cmd/src/ryujinxkit_cmd/assets/sql/: tables.sql
cmd/src/ryujinxkit_cmd/constants/: configs.py  configs2.py
cmd/src/ryujinxkit_cmd/data/: __init__.py
cmd/src/ryujinxkit_cmd/data/functions/: source.py
cmd/src/ryujinxkit_cmd/functions/: entrypoint.py  save_states.py  setup.py  source.py
cmd/src/ryujinxkit_cmd/general/: session.py
cmd/src/ryujinxkit_cmd/ui/functions/: begin.py
docker/: build.Dockerfile  cmd.Dockerfile  dev.Dockerfile  development.Dockerfile  development.dockerfile  dist.Dockerfile  release.Dockerfile  server.Dockerfile
docker/cmd/: linux.Dockerfile  windows.Dockerfile
docker/development/: server.Dockerfile
docker/server/: Dockerfile
documents/: ryujinxkit-cmd.md  ryujinxkit-server.md
ryujinxkit/: __main__.py
ryujinxkit/app/cmd/: _callback_.py  callback.py  setup.py  typer.py
ryujinxkit/app/context/: behavioural_control.py
ryujinxkit/app/modules/: context.py
ryujinxkit/assets/: database-setup.sql
ryujinxkit/assets/configs/: internal.json
ryujinxkit/assets/schemas/: app-configs.json
ryujinxkit/core/: fs.py  ui.py
ryujinxkit/core/db/: __init__.py  configs.py  setup.py  theme.py  theme_applier.py
ryujinxkit/core/fs/: resolver.py  setup.py
ryujinxkit/core/ui/: objects.py  theme.py  theme_applier.py
ryujinxkit/helpers/: AP_decomp.py  parsers.py
ryujinxkit/libs/: theming.py
ryukit/: __init__.py  __main__.py  utils.py
ryukit/app/: __context__.py  __init__.py  __tracker__.py  __typer__.py  install_ryujinx.py  parser_.py  ryukitconfigs.json  track.py
ryukit/app/cmd/: _callback_.py  install_ryujinx.py  ryujinx_install.py
ryukit/app/manage/: create.py  create_save.py  parser_.py
ryukit/app/modules/: context.py
ryukit/app/save/: __context__.py  __init__.py  __typer__.py  apply.py  create.py  deploy.py  drop.py  dump.py  ls.py  parser_.py  pull.py  relabel.py  restore.py  search.py
ryukit/assets/: logo.txt  ryukitconfigs.default.json  ryukitconfigs.schema.json  setup_database.sql
ryukit/assets/configs/: app-defaults.json  default-app-configs.json  defaults.app.json  initial-state.json  internal-configs.json  internal.json
ryukit/assets/schemas/: configs.app.json
ryukit/core/: display.py  fs.py  presentation.py  runtime.py  shared.py  state.py  ui.py
ryukit/core/db/: __init__.py  models.py
ryukit/helpers/: builders.py  typer_builder.py
ryukit/libs/: components.py  db.py  paths.py  theming.py  typer_extensions.py
ryukit/libs/db/: __init__.py  models.py
ryukit/utils/: calculator.py  common_logic.py  misc.py  orchestration.py  patterns.py  typer_builder.py
scripts/: build-exe.ps1  build_exe  configure_wine  run_ryujinxkit.py
server/: Dockerfile  pyproject.toml
server/resources/docker/: Dockerfile
server/src/ryujinxkit_server/: __main__.py  session.py
server/src/ryujinxkit_server/constants/: configs.py  flask.py  logging.py  server.py
src/: __main__.py
src/data/functions/: save_states.py  source.py
src/general/: enums.py  session.py
src/general/constants/: configs.py
src/ryujinxkit/: README.md  __init__.py  __main__.py  configs.py  metadata.py
src/ryujinxkit/app/: __init__.py  __main__.py  context.py  objects.py
src/ryujinxkit/data/: __init__.py  configs.py
src/ryujinxkit/database/: configs.py  connection.py
src/ryujinxkit/display/: configs.py
src/ryujinxkit/file_access/: resolver.py  resolver_node.py
src/ryujinxkit/general/: __init__.py  configs.py  enums.py  session.py
src/ryujinxkit/parser/: __init__.py
src/ryujinxkit/typers/: app.py  root.py  saves.py
src/ryujinxkit/ui/: __init__.py
src/ryukit/app/: __init__.py  install_ryujinx.py  track.py
src/ryukit/libs/: db.py
src/ryukit/utils/: misc.py  qol.py
tests/: conftest.py  db  test_commands.py  test_contexts.py  test_save_context.py  test_utils.py  utils.py
tests/cases/: conftest.py  test_author.py  test_create.py  test_export.py  test_remove.py  test_version.py
tests/decorators/: execute.py
tests/integration/: test_commands.py
tests/schemas/: export_file.py
tests/unit/: test_commands.py  test_save_context.py  test_utils.py
tests/unit_tests/: test_author.py  test_create.py  test_install.py  test_version.py
tests/utils/: context_control.py  execute.py  noE_execute.py  subprocesses.py
(+225 files in other folders)
