[project]
name = "ryukit"
version = "0.3.0"
description = "A CLI tool for managing Ryujinx."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "psutil>=7.0.0",
  "requests>=2.32.4",
  "rich>=14.0.0",
  "sqlalchemy>=2.0.41",
  "typer>=0.16.0",
]

[dependency-groups]
dev = [
  "black>=25.1.0",
  "isort>=6.0.1",
  "pyinstaller>=6.14.1",
  "pyright>=1.1.402",
  "pytest>=8.4.0",
  "pytest-cov>=6.1.1",
  "setproctitle>=1.3.6",
]

[project.scripts]
ryukit = "ryukit:start"

[tool.uv]
package = true

[tool.black]
line-length = 79
skip-magic-trailing-comma = true

[tool.isort]
remove_redundant_aliases = true
profile = "black"

[tool.pyright]
include = ["ryukit", "tests"]
typeCheckingMode = "strict"

[tool.coverage.run]
source = ["src/ryukit"]
