[project]
name = "ryujinxkit-cmd"
version = "0.1.0"
description = "Ryujinxkit command-line package."
authors = [
    {name = "A-2-4-8-5-10-9-7-3-6-1",email = "112730580+A-2-4-8-5-10-9-7-3-6-1@users.noreply.github.com"}
]
license = {text = "MIT"}
requires-python = ">=3.13,<3.14"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "platformdirs (>=4.3.6,<5.0.0)",
    "rich (>=13.9.4,<14.0.0)",
    "pyinstaller (>=6.11.1,<7.0.0)",
    "hyrchy-pthresolver @ git+https://github.com/A-2-4-8-5-10-9-7-3-6-1/python-devkit.git#subdirectory=hyrchy-pthresolver",
    "parser-generator @ git+https://github.com/A-2-4-8-5-10-9-7-3-6-1/python-devkit.git#subdirectory=parser-generator",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79
